--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mongoose-paginate-v2": "^1.3.17",
     "morgan": "1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
